Presentation 30.10.2024 (added QR code)

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 					</ul>
 					</div>
 				</section>
-				<section>
-					QR CODE
+				<section data-background-color="black">
+					<img src="assets/qr_code.png"  height="500">
 				</section>
 
 
